fixed the invisible extra prs icon in profile (#654)
* fixed the invisible extra prs icon in profile

* fixed a typo

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -506,7 +506,7 @@
       margin: 10px 0 0 0;
 
       .bonus-box {
-        background-image: url("icon-light-bonus.svg");
+        background-image: asset-url("icon-light-bonus.svg");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
